# sandbox

./: CMakeLists.txt  README.md
client/: Client.cpp  Client.h  main.cpp
qclient/: CMakeLists.txt
qcore/: Messages.h  MessagesMngr.h
qserver/: Socket.cpp  main.cpp
server/: QServer.h  QSocket.cpp  QSocket.h  Server.cpp  message.h
server-client/: CMakeLists.txt  all.sh  build.sh  build_and_compile.sh  clean.sh  compile.sh
server-client/client/: CMakeLists.txt
server-client/core/: CMakeLists.txt  Messages.cpp  Messages.h  MsgManager.cpp  MsgManager.h
server-client/qclient/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
server-client/qcore/: CMakeLists.txt  Messages.cpp  Messages.h  MessagesMngr.cpp  MessagesMngr.h
server-client/qserver/: CMakeLists.txt  Connection.cpp  Connection.h  Server.cpp  Server.h  Socket.cpp  Socket.h  main.cpp  message.h
server-client/server/: CMakeLists.txt  QServer.cpp  Server.h  main.cpp
server-client/tests/: CMakeLists.txt  test_options.cpp
